--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
 	},
 	"dependencies": {
 		"@azure/service-bus": "^7.6.0",
+		"@vscode/webview-ui-toolkit": "^1.0.0",
 		"uuid": "^8.3.2"
 	}
 }
