--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "message-queue-explorer",
 	"displayName": "Message Queue Explorer",
-	"description": "Tool to view and interact with message queues.",
+	"description": "Tool to view and interact with Service Bus message queues.",
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.69.0"
